crates/icydb-schema-derive/tests/ui/primary_key_relation_fail.stderr
error: primary key field 'owner_id' cannot be a relation (Ref<T> is not a primary key)
 --> tests/ui/primary_key_relation_fail.rs:5:10
  |
5 |     pk = "owner_id",
  |          ^^^^^^^^^^
